--- a/core.csproj
+++ b/core.csproj
@@ -951,6 +951,7 @@
     <ProjectReference Include="game.csproj" />
     <ProjectReference Include="ui.csproj" />
     <ProjectReference Include="configs.csproj" />
+    <ProjectReference Include="utils.csproj" />
     <ProjectReference Include="UnityEditor.UI.csproj" />
     <ProjectReference Include="UnityEngine.UI.csproj" />
   </ItemGroup>
